Fixed Polaroids Spacing

--- a/mars.css
+++ b/mars.css
@@ -316,7 +316,7 @@ a,a:visited,a:active{color:initial; text-decoration:none;}
 .polaroid{
     display: block;
     margin: auto;
-    width: 100%;
+    width: 90%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-bottom: 10%;
 }
